examples/errors/bad_box.dvx
-.. Ejemplo con varios errores, se encuentran identificados con comentarios..-


box items{
  float gastos;
  float balance;
  int mes;
  float balance;  -. Error! variable redeclarada!
  cajaChica caja; -. Error! tipos box recursivos
   variant:
  {}              -. Error! campo variant vacio (unexpected "}")
}

box cajaChica{
  items array[12] movimientos;  -.Error! Definicion recursiva
  int year;
  Cajero c;                     -. Error! introduce recursividad de box 

  variant:
  int encargado;
  items itemb;    -. Error! tipos recursivos en variant
  {
    int noComision;
    char tipo;
  } 
  int array[3] encargados;
}


box items{            -. Error box redeclarado 
  float gasto= 100;   -. Error de sintaxis! No se puede inicializar
  string a;           -. Error! el campo no puede ser string
  void b;             -. Error! el campo no puede ser void
  variant:
   {}
}

box vacio{}           -. Error! el box no debe ser vacio

box conUno{
  vacio a;
variant:
  int b;
}

int main(){

  cajaChica cajaC;
  float monto=0.0,total=0.0;

  for i in 0..11{
     cajaC.movimientos= 6;       -. Error no asignable
     cajaC.movimientos[88]= 22.2 -. Error el indice excede el tamaño del arreglo 
     cajaC.movimientos[i].balance= monto;
     monto= monto*5.0 + 60.0;
     total = total + monto; 
     write "El total es:", total, "(hasta el mes ", 
                cajaC.movimientos[i].mes, ")";  
  }


  return 1;

}


-. Funcion para obtener el minimo de un arreglo
float minArray($float array[5] arreglo, int long){

float min= arreglo[0];

  for v in 0..long {
    if(arreglo[v]<= min){
       min= arreglo[v];}
  } 

  -. Segunda opcion 

  for valor in arreglo{
    if(valor< min){
       min= valor;
    }
  }
  return min;
}